[tool.poetry]
name = "counseling-generator-backend"
version = "0.1.0"
description = ""
authors = ["youralien <ryanlouie2021@u.northwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.1.1"
flask-socketio = "5.1.1"
pandas = "1.4.2"
pip = "21.2.4"
torch = "1.11.0"
tqdm = "4.64.0"
transformers = "4.17.0"
typing-extensions = "4.1.1"
notebook = "6.4.10"
datasets = "2.1.0"
nltk = "3.7"
swifter = "1.1.3"
scikit-learn = "1.0.2"
absl-py = "1.0.0"
rouge-score = "0.0.4"
bert-score = "0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
